[tool.poetry]
name = "tux-overlay"
version = "0.1.0"
description = ""
authors = ["ryleu <riley.j.mclain@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
